[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lr1-parser"
version = "0.1.0"
description = "LR(1) Parser for CS3025 @ UTEC"
requires-python = ">=3.8"

dependencies = [
    "flask",
]

[tool.setuptools]
py-modules = []
packages = []
